Arpeggiator works on keys sustained with shift
 - moved CapsLock checks to a variable
 - removed sustained array
 - arpeggiator now works on sustained keys, this makes the website more mouse-friendly

--- a/klaviatura.html
+++ b/klaviatura.html
@@ -22,74 +22,74 @@
         <div class="klaviatura-flex-container">
             <div unselectable="true" class="klaviatura-container">
                 <div class="augsina">
-                    <div id="k1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">C</div>
-                    <div id="k2" onmouseover="iebrauca(2)" onmouseout="atlaidaTaustinu(2)" onmousedown="nospiedaTaustinu(2)" onmouseup="atlaidaTaustinu(2)">
+                    <div id="k1" onmouseover="iebrauca(1)" onmouseout="KeyUpProcessing(1)" onmousedown="KeyDwnProcessing(1)" onmouseup="KeyUpProcessing(1)">C</div>
+                    <div id="k2" onmouseover="iebrauca(2)" onmouseout="KeyUpProcessing(2)" onmousedown="KeyDwnProcessing(2)" onmouseup="KeyUpProcessing(2)">
                         <div>C#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">D</div>
-                    <div id="k4" onmouseover="iebrauca(4)" onmouseout="atlaidaTaustinu(4)" onmousedown="nospiedaTaustinu(4)" onmouseup="atlaidaTaustinu(4)">
+                    <div id="k3" onmouseover="iebrauca(3)" onmouseout="KeyUpProcessing(3)" onmousedown="KeyDwnProcessing(3)" onmouseup="KeyUpProcessing(3)">D</div>
+                    <div id="k4" onmouseover="iebrauca(4)" onmouseout="KeyUpProcessing(4)" onmousedown="KeyDwnProcessing(4)" onmouseup="KeyUpProcessing(4)">
                         <div>D#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">E</div>
-                    <div id="k6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">F</div>
-                    <div id="k7" onmouseover="iebrauca(7)" onmouseout="atlaidaTaustinu(7)" onmousedown="nospiedaTaustinu(7)" onmouseup="atlaidaTaustinu(7)">
+                    <div id="k5" onmouseover="iebrauca(5)" onmouseout="KeyUpProcessing(5)" onmousedown="KeyDwnProcessing(5)" onmouseup="KeyUpProcessing(5)">E</div>
+                    <div id="k6" onmouseover="iebrauca(6)" onmouseout="KeyUpProcessing(6)" onmousedown="KeyDwnProcessing(6)" onmouseup="KeyUpProcessing(6)">F</div>
+                    <div id="k7" onmouseover="iebrauca(7)" onmouseout="KeyUpProcessing(7)" onmousedown="KeyDwnProcessing(7)" onmouseup="KeyUpProcessing(7)">
                         <div>F#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">G</div>
-                    <div id="k9" onmouseover="iebrauca(9)" onmouseout="atlaidaTaustinu(9)" onmousedown="nospiedaTaustinu(9)" onmouseup="atlaidaTaustinu(9)">
+                    <div id="k8" onmouseover="iebrauca(8)" onmouseout="KeyUpProcessing(8)" onmousedown="KeyDwnProcessing(8)" onmouseup="KeyUpProcessing(8)">G</div>
+                    <div id="k9" onmouseover="iebrauca(9)" onmouseout="KeyUpProcessing(9)" onmousedown="KeyDwnProcessing(9)" onmouseup="KeyUpProcessing(9)">
                         <div>G#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">A</div>
-                    <div id="k11" onmouseover="iebrauca(11)" onmouseout="atlaidaTaustinu(11)" onmousedown="nospiedaTaustinu(11)" onmouseup="atlaidaTaustinu(11)">
+                    <div id="k10" onmouseover="iebrauca(10)" onmouseout="KeyUpProcessing(10)" onmousedown="KeyDwnProcessing(10)" onmouseup="KeyUpProcessing(10)">A</div>
+                    <div id="k11" onmouseover="iebrauca(11)" onmouseout="KeyUpProcessing(11)" onmousedown="KeyDwnProcessing(11)" onmouseup="KeyUpProcessing(11)">
                         <div>A#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">B</div>
-                    <div id="k13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">C</div>
-                    <div id="k14" onmouseover="iebrauca(14)" onmouseout="atlaidaTaustinu(14)" onmousedown="nospiedaTaustinu(14)" onmouseup="atlaidaTaustinu(14)">
+                    <div id="k12" onmouseover="iebrauca(12)" onmouseout="KeyUpProcessing(12)" onmousedown="KeyDwnProcessing(12)" onmouseup="KeyUpProcessing(12)">B</div>
+                    <div id="k13" onmouseover="iebrauca(13)" onmouseout="KeyUpProcessing(13)" onmousedown="KeyDwnProcessing(13)" onmouseup="KeyUpProcessing(13)">C</div>
+                    <div id="k14" onmouseover="iebrauca(14)" onmouseout="KeyUpProcessing(14)" onmousedown="KeyDwnProcessing(14)" onmouseup="KeyUpProcessing(14)">
                         <div>C#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">D</div>
-                    <div id="k16" onmouseover="iebrauca(16)" onmouseout="atlaidaTaustinu(16)" onmousedown="nospiedaTaustinu(16)" onmouseup="atlaidaTaustinu(16)">
+                    <div id="k15" onmouseover="iebrauca(15)" onmouseout="KeyUpProcessing(15)" onmousedown="KeyDwnProcessing(15)" onmouseup="KeyUpProcessing(15)">D</div>
+                    <div id="k16" onmouseover="iebrauca(16)" onmouseout="KeyUpProcessing(16)" onmousedown="KeyDwnProcessing(16)" onmouseup="KeyUpProcessing(16)">
                         <div>D#</div>
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="k17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">E</div>
+                    <div id="k17" onmouseover="iebrauca(17)" onmouseout="KeyUpProcessing(17)" onmousedown="KeyDwnProcessing(17)" onmouseup="KeyUpProcessing(17)">E</div>
                 </div>
                 <div class="apaksina">
-                    <div id="b1" onmouseover="iebrauca(1)" onmouseout="atlaidaTaustinu(1)" onmousedown="nospiedaTaustinu(1)" onmouseup="atlaidaTaustinu(1)">
+                    <div id="b1" onmouseover="iebrauca(1)" onmouseout="KeyUpProcessing(1)" onmousedown="KeyDwnProcessing(1)" onmouseup="KeyUpProcessing(1)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b3" onmouseover="iebrauca(3)" onmouseout="atlaidaTaustinu(3)" onmousedown="nospiedaTaustinu(3)" onmouseup="atlaidaTaustinu(3)">
+                    <div id="b3" onmouseover="iebrauca(3)" onmouseout="KeyUpProcessing(3)" onmousedown="KeyDwnProcessing(3)" onmouseup="KeyUpProcessing(3)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b5" onmouseover="iebrauca(5)" onmouseout="atlaidaTaustinu(5)" onmousedown="nospiedaTaustinu(5)" onmouseup="atlaidaTaustinu(5)">
+                    <div id="b5" onmouseover="iebrauca(5)" onmouseout="KeyUpProcessing(5)" onmousedown="KeyDwnProcessing(5)" onmouseup="KeyUpProcessing(5)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b6" onmouseover="iebrauca(6)" onmouseout="atlaidaTaustinu(6)" onmousedown="nospiedaTaustinu(6)" onmouseup="atlaidaTaustinu(6)">
+                    <div id="b6" onmouseover="iebrauca(6)" onmouseout="KeyUpProcessing(6)" onmousedown="KeyDwnProcessing(6)" onmouseup="KeyUpProcessing(6)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b8" onmouseover="iebrauca(8)" onmouseout="atlaidaTaustinu(8)" onmousedown="nospiedaTaustinu(8)" onmouseup="atlaidaTaustinu(8)">
+                    <div id="b8" onmouseover="iebrauca(8)" onmouseout="KeyUpProcessing(8)" onmousedown="KeyDwnProcessing(8)" onmouseup="KeyUpProcessing(8)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b10" onmouseover="iebrauca(10)" onmouseout="atlaidaTaustinu(10)" onmousedown="nospiedaTaustinu(10)" onmouseup="atlaidaTaustinu(10)">
+                    <div id="b10" onmouseover="iebrauca(10)" onmouseout="KeyUpProcessing(10)" onmousedown="KeyDwnProcessing(10)" onmouseup="KeyUpProcessing(10)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b12" onmouseover="iebrauca(12)" onmouseout="atlaidaTaustinu(12)" onmousedown="nospiedaTaustinu(12)" onmouseup="atlaidaTaustinu(12)">
+                    <div id="b12" onmouseover="iebrauca(12)" onmouseout="KeyUpProcessing(12)" onmousedown="KeyDwnProcessing(12)" onmouseup="KeyUpProcessing(12)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b13" onmouseover="iebrauca(13)" onmouseout="atlaidaTaustinu(13)" onmousedown="nospiedaTaustinu(13)" onmouseup="atlaidaTaustinu(13)">
+                    <div id="b13" onmouseover="iebrauca(13)" onmouseout="KeyUpProcessing(13)" onmousedown="KeyDwnProcessing(13)" onmouseup="KeyUpProcessing(13)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b15" onmouseover="iebrauca(15)" onmouseout="atlaidaTaustinu(15)" onmousedown="nospiedaTaustinu(15)" onmouseup="atlaidaTaustinu(15)">
+                    <div id="b15" onmouseover="iebrauca(15)" onmouseout="KeyUpProcessing(15)" onmousedown="KeyDwnProcessing(15)" onmouseup="KeyUpProcessing(15)">
                         <div class="freq-indicator"></div>
                     </div>
-                    <div id="b17" onmouseover="iebrauca(17)" onmouseout="atlaidaTaustinu(17)" onmousedown="nospiedaTaustinu(17)" onmouseup="atlaidaTaustinu(17)">
+                    <div id="b17" onmouseover="iebrauca(17)" onmouseout="KeyUpProcessing(17)" onmousedown="KeyDwnProcessing(17)" onmouseup="KeyUpProcessing(17)">
                         <div class="freq-indicator"></div>
                     </div>
                 </div>
