Changed input types to number
Changed frequency and temperament input to type=number

--- a/klaviatura.html
+++ b/klaviatura.html
@@ -96,7 +96,7 @@
             </div>
             <div class="controls-container">
                 <div class="control-group">
-                    <input type="text" id="baseFreq" value="440" style="width: 50px;">
+                    <input type="number" id="baseFreq" value="440" style="width: 70px;">
                     <button onclick="chBaseFreq();">Set frequency!</button>
                 </div>
                 <div class="control-group">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="control-group">
                     Temperament:
-                    <input type="text" id="tetCh" value="12" style="width: 40px;">
+                    <input type="number" id="tetCh" value="12" style="width: 60px;">
                     <button onclick="changeTemperament(document.getElementById(`tetCh`).value);">Set!</button>
                 </div>
                 <div class="control-group">
